[package]
name = "shasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[dependencies]
num-bigint = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
